# ChangeLog for net-dns/bind
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.97 2005/11/11 00:13:22 voxus Exp $

*bind-9.3.2_beta2-r1 (11 Nov 2005)

  11 Nov 2005; Konstantin Arkhipov <voxus@gentoo.org> -files/127,
  -files/localhost, -files/named.conf-r1, -files/named.conf-r2,
  -bind-9.3.2_beta2.ebuild, +bind-9.3.2_beta2-r1.ebuild:
  Cleaned out unused files, bug #108123 fixed only in 9.3.2_beta2 for now.

*bind-9.3.2_beta2 (09 Nov 2005)
*bind-9.3.1-r7 (09 Nov 2005)
*bind-9.2.5-r9 (09 Nov 2005)

  09 Nov 2005; Konstantin Arkhipov <voxus@gentoo.org> -bind-9.2.5-r8.ebuild,
  -bind-9.3.1-r6.ebuild, -bind-9.3.2_beta1.ebuild, -files/named.init-r3,
  -files/named.confd-r1, +bind-9.3.2_beta2.ebuild, +bind-9.3.1-r7.ebuild,
  +bind-9.2.5-r9.ebuild, +files/named.init-r3, +files/named.confd-r1:
  Once again closing #107724. Also parallel build is now disabled only for
  distcc-systems.

  02 Nov 2005; Konstantin Arkhipov <voxus@gentoo.org> bind-9.3.1-r6.ebuild:
  Dropped all stable keywords due to compile races and bug #107724.

  31 Oct 2005; Gustavo Zacarias <gustavoz@gentoo.org> bind-9.3.1-r6.ebuild:
  Stable on sparc

  30 Oct 2005; Konstantin Arkhipov <voxus@gentoo.org> bind-9.2.5-r4.ebuild,
  bind-9.2.5-r6.ebuild, bind-9.2.5-r8.ebuild, bind-9.3.1-r6.ebuild,
  bind-9.3.2_beta1.ebuild:
  Chroot's configuration way changed wrt bug #109482. Added warning about
  vserver' enviroment.
  Also 9.3.1 finally goes stable on amd64 and x86.

*bind-9.3.2_beta1 (17 Oct 2005)

  17 Oct 2005; Konstantin Arkhipov <voxus@gentoo.org> +bind-9.3.2_beta1.ebuild:
  Beta bump wrt bug #109587.

*bind-9.2.5-r8 (01 Oct 2005)
*bind-9.3.1-r6 (01 Oct 2005)

  01 Oct 2005; Konstantin Arkhipov <voxus@gentoo.org> +bind-9.2.5-r8.ebuild,
  +bind-9.3.1-r6.ebuild, -bind-9.2.5-r7.ebuild, -bind-9.3.1-r5.ebuild,
  -files/named.init-r1, +files/named.init-r2:
  Be more accuracy when looking for pid-file. Thanks to Kerin Millar