@@ -1,19 +1,19 @@
-MD5 b25f669cdd250ff0b51200e61b0dd58a ChangeLog 16254
+MD5 b37f96f0d04cf6af5ff4fe1e5e86370b ChangeLog 16595
+MD5 64661f29315f63e8d14f3c5fe3efdb73 bind-9.2.5-r10.ebuild 8945
 MD5 2c50194cee9e7484dc5ac78935fdf0d5 bind-9.2.5-r4.ebuild 8347
 MD5 109211a7fac00f530ce0d255763f24b2 bind-9.2.5-r6.ebuild 8376
-MD5 e1e5ea7060eedb1d883f5280b6758505 bind-9.2.5-r9.ebuild 8636
-MD5 75105df4c58ab96c51005ebc66ea71d3 bind-9.3.1-r7.ebuild 8423
-MD5 c17a3d3cd24b1063e5847ce2a083dd8d bind-9.3.2_beta2-r1.ebuild 8524
+MD5 06ca06ed796418761c2505adb968ab99 bind-9.3.1-r8.ebuild 8731
+MD5 ef0ece1abaa8e6446e776e4c961b9a90 bind-9.3.2_beta2-r2.ebuild 8871
 MD5 42b5ed5adcee33cf40531d7955412b21 files/10bind.env 27
 MD5 51197afe8da37b1b453456de90ca4f25 files/127.zone 227
 MD5 4346332cc9681502a3aedfd0a7a1ac41 files/bind-9.2.5-berkdb_fix.patch 537
 MD5 75d14cac80e71b4ac0662775064c06e2 files/bind-9.2.5-dlz-mysql.patch 11296
 MD5 9a06b553558342585f8ba88bd5e4c569 files/bind-9.2.5-mysql.patch 11315
+MD5 d47c8a742a2645377ba4d783907700dd files/digest-bind-9.2.5-r10 127
 MD5 d47c8a742a2645377ba4d783907700dd files/digest-bind-9.2.5-r4 127
 MD5 d47c8a742a2645377ba4d783907700dd files/digest-bind-9.2.5-r6 127
-MD5 d47c8a742a2645377ba4d783907700dd files/digest-bind-9.2.5-r9 127
-MD5 708e6dd2ce57583129d00b3d721bc3a4 files/digest-bind-9.3.1-r7 133
-MD5 addc10df4c379ce1a155b87c2d415e11 files/digest-bind-9.3.2_beta2-r1 136
+MD5 708e6dd2ce57583129d00b3d721bc3a4 files/digest-bind-9.3.1-r8 133
+MD5 addc10df4c379ce1a155b87c2d415e11 files/digest-bind-9.3.2_beta2-r2 136
 MD5 2bb12cfcd70284e72fbf9e70e5e2974d files/dyndns-samples.tbz2 22866
 MD5 ccfca63035b534556c3910270d40a4b9 files/localhost.zone 412
 MD5 2b6e7c10f43941cdd147d5de0c9c02d6 files/localhost.zone-r1 419
