@@ -1,6 +1,15 @@
 # ChangeLog for net-dns/bind
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.97 2005/11/11 00:13:22 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.98 2005/11/12 00:11:09 voxus Exp $
+
+*bind-9.3.2_beta2-r2 (12 Nov 2005)
+*bind-9.3.1-r8 (12 Nov 2005)
+*bind-9.2.5-r10 (12 Nov 2005)
+
+  12 Nov 2005; Konstantin Arkhipov <voxus@gentoo.org> -bind-9.2.5-r9.ebuild,
+  -bind-9.3.1-r7.ebuild, -bind-9.3.2_beta2-r1.ebuild, +bind-9.2.5-r10.ebuild,
+  +bind-9.3.1-r8.ebuild, +bind-9.3.2_beta2-r2.ebuild:
+  Closing bugs #106784 and #106974.
 
 *bind-9.3.2_beta2-r1 (11 Nov 2005)
 
